--- a/css/global.css
+++ b/css/global.css
@@ -73,9 +73,21 @@ h1 {
 }
 
 h1.logo {
-	font-size: 3em;
+	font-size: 6em;
 	margin: .3em 0 .15em;
 	font-weight: bold;
+}
+
+@media (max-width: 940px) {
+	font-size: 5em;
+}
+
+@media (max-width: 800px) {
+	font-size: 4em;
+}
+
+@media (max-width: 650px) {
+	font-size: 3em;
 }
 
 .tagline {
