--- a/css/global.css
+++ b/css/global.css
@@ -28,10 +28,10 @@ body {
 	background-image: -moz-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
 	background-image: linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
 	font-family: Asap, Arial, Helvetica, sans-serif;
-	font-size: 16px;
+	font-size: 14px;
+	line-height: 2em;
 	font-weight: normal;
 	color: #000;
-	padding: 10px;
 	overflow-y: scroll;
 	/* Removed due to chrome bug: text-rendering: optimizeLegibility;  */
 }
@@ -47,10 +47,6 @@ h6 { font-size: .75em;  margin-bottom: 1.67em; }
 p, blockquote, ul, fieldset, form, ol, dl, dir, menu { margin-bottom: 1.12em; }
 ol, ul, dir, menu, dd { margin-left: 40px }
 
-p, li {
-	line-height: 1.5em;
-}
-
 dt {
 	font-size: 1.2em;
 	padding: .5em 0;
@@ -59,23 +55,22 @@ dt {
 
 #container {
 	width: 720px;
-	margin: 0 auto;
-	padding-bottom: 2em;
+	margin: 2em auto;
 }
 
 header {
 	text-align: center;
 	color: black;
-	margin-bottom: 0px;
+	margin: 3em 0;
 }
 
 h1 {
-	margin: 3em 0 .3em;
+	margin: 0;
+	line-height: 1em;
 }
 
 h1.logo {
 	font-size: 6em;
-	margin: .3em 0 .15em;
 	font-weight: bold;
 }
 
@@ -101,7 +96,8 @@ h1.logo {
 	text-align: center;
 	position: relative;
 	font-style: italic;
-	padding: .15em 0;
+	padding: 0;
+	margin: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -119,9 +115,7 @@ h1, h2, h3, h4, h5, h6 {
 
 footer {
 	color: #666;
-	font-size: .8em;
 	text-align: center;
-	margin-top: 3em;
 }
 
 
@@ -170,7 +164,6 @@ footer ul li:not(:first-child)::before {
 	float: right;
 	font: .65em monospace;
 	line-height: 26px;
-	padding-right: .3em;
 }
 
 .accordian-header.open::after {
@@ -179,15 +172,15 @@ footer ul li:not(:first-child)::before {
 
 .accordian-header {
 	background-color: #181818;
-	margin: 20px 0;
+	margin-bottom: 1em;
 	cursor: pointer;
-	padding: 5px;
+	padding: 0.25em 0.5em;
 	color: white;
 }
 
 .accordian-panel {
 	overflow: hidden;
-	padding: 0 5px;
+	padding: 0 0.5em;
 }
 
 .projects dd { margin: 0; }
