--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,3 @@
-@charset "utf-8";
-
 /**
  * Fonts section
  **/
@@ -30,7 +28,9 @@
 body {
 	background: #FFF none no-repeat fixed top left;
 	background-image: -webkit-gradient(linear, 100% 0%, 100% 100%, from(#EEE), color-stop(25%, #FFF), color-stop(75%, #FFF), to(#EEE));
+	background-image: -webkit-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
 	background-image: -moz-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
+	background-image: -o-linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
 	background-image: linear-gradient(top, #EEE, #FFF, #FFF, #EEE);
 	font: 11pt/2 Raleway, Helvetica Neue, Helvetica, Arial, sans-serif;
 	text-rendering: optimizeLegibility;
