--- a/avatars.css
+++ b/avatars.css
@@ -2,7 +2,7 @@
 .amcgregor { list-style-image: url(https://secure.gravatar.com/avatar/5441945c65e3a98df2e7a91dc7e9118c?s=18&d=mm); }
 .eboyjr { list-style-image: url(https://secure.gravatar.com/avatar/046ed2021abbff1d4d7812ad44dbb4af?s=18&d=mm); }
 .devyn { list-style-image: url(https://secure.gravatar.com/avatar/600ad48eea92da6bdab1e6d2b51bf819?s=18&d=mm); }
-.sephr { list-style-image: url(https://secure.gravatar.com/avatar/f43206cf935c8a5d532285c0d67b20d1?s=18&d=mm); }
+.eligrey { list-style-image: url(https://secure.gravatar.com/avatar/f43206cf935c8a5d532285c0d67b20d1?s=18&d=mm); }
 .gkatsev { list-style-image: url(https://secure.gravatar.com/avatar/dde6f2dd707e8b716aca9b2ba065a798?s=18&d=mm); }
 .inimino { list-style-image: url(https://secure.gravatar.com/avatar/e4e997037a6341e7881816db5ef23ba7?s=18&d=mm); }
 .yrashk { list-style-image: url(https://secure.gravatar.com/avatar/ae2b294e24fd2e472bfca45ab19050c5?s=18&d=mm); }
