--- a/css/global.css
+++ b/css/global.css
@@ -104,6 +104,10 @@ header h1 {
 	color: black;
 	border-radius: 3px;
 	background-color: white;
+	box-shadow: 0 2px 2px rgba(0,0,0,0.2)
+}
+#links ul li a:active {
+	box-shadow: inset 0 1px 1px rgba(0,0,0,0.2);
 }
 
 .oftn, .oftn-strong {
