--- a/css/global.css
+++ b/css/global.css
@@ -62,6 +62,11 @@ dt {
 	margin: 1em 0 0 0;
 }
 
+em {
+	font-family: Consolas, "DejaVu Sans Mono", monospace;
+	font-style: normal;
+}
+
 /**
  * Header styles
  **/
