Update website for ~dsamarin

--- a/avatars.css
+++ b/avatars.css
@@ -1,6 +1,6 @@
 .cloudhead { list-style-image: url(https://secure.gravatar.com/avatar/a8a0061962c41735ca87789720da46c8?s=18&d=mm); }
 .amcgregor { list-style-image: url(https://secure.gravatar.com/avatar/5441945c65e3a98df2e7a91dc7e9118c?s=18&d=mm); }
-.eboyjr { list-style-image: url(https://secure.gravatar.com/avatar/046ed2021abbff1d4d7812ad44dbb4af?s=18&d=mm); }
+.dsamarin { list-style-image: url(https://secure.gravatar.com/avatar/046ed2021abbff1d4d7812ad44dbb4af?s=18&d=mm); }
 .devyn { list-style-image: url(https://secure.gravatar.com/avatar/600ad48eea92da6bdab1e6d2b51bf819?s=18&d=mm); }
 .eligrey { list-style-image: url(https://secure.gravatar.com/avatar/f43206cf935c8a5d532285c0d67b20d1?s=18&d=mm); }
 .gkatsev { list-style-image: url(https://secure.gravatar.com/avatar/dde6f2dd707e8b716aca9b2ba065a798?s=18&d=mm); }
