--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
  * Fonts section
  **/
 
-@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,400|Raleway);
+@import url(//fonts.googleapis.com/css?family=Vollkorn:400italic,400|Raleway);
 
 /* OFTN Aller is a modified version of Aller with an empty set and a raised colon.
    Aller is copyright Dalton Maag Ltd, http://www.daltonmaag.com/ */
