Welcome cmars to the ΩF:∅ Working Group

--- a/avatars.css
+++ b/avatars.css
@@ -7,9 +7,9 @@
 .inimino { list-style-image: url(https://secure.gravatar.com/avatar/e4e997037a6341e7881816db5ef23ba7?s=18&d=mm); }
 .yrashk { list-style-image: url(https://secure.gravatar.com/avatar/ae2b294e24fd2e472bfca45ab19050c5?s=18&d=mm); }
 
-.sanitypassing { list-style-image: url(https://secure.gravatar.com/avatar/a0f4691b6cf3d31229275556de10a2e6?s=18&d=mm); }
 .prophile { list-style-image: url(https://secure.gravatar.com/avatar/d144a5ec0052fb1f57c0feaf6af46289?s=18&d=mm); }
 .oksushi { list-style-image: url(https://secure.gravatar.com/avatar/3f74ac9c69ed95340264f2d5125978a2?s=18&d=mm); }
+.cmars { list-style-image: url(https://secure.gravatar.com/avatar/092e7cde817d8892bdc30e45a2a82f55?s=18&d=mm); }
 .cmr { list-style-image: url(https://secure.gravatar.com/avatar/f012fce9f997ceefa53283631d45de0d?s=18&d=mm); }
 .danpalmer { list-style-image: url(https://secure.gravatar.com/avatar/d8f35cebbc045646a733938b9a06bdc6?s=18&d=mm); }
 .guy { list-style-image: url(https://secure.gravatar.com/avatar/d458bf7a80855c9461d0a76e8f2c76b9?s=18&d=mm); }
@@ -18,7 +18,6 @@
 .jeannicolas { list-style-image: url(https://secure.gravatar.com/avatar/025dcca07f3bd8d6fca31e2c601654fb?s=18&d=mm); }
 .joelteon { list-style-image: url(https://secure.gravatar.com/avatar/124f068d740698f58710004a1258567b?s=18&d=mm); }
 .ImBcmDth { list-style-image: url(https://secure.gravatar.com/avatar/073c9f11f5886ab6418cac4ee1a6f87c?s=18&d=mm); }
-.PragmaticCypher { list-style-image: url(https://secure.gravatar.com/avatar/d41d8cd98f00b204e9800998ecf8427e?s=18&d=mm); }
 .banister { list-style-image: url(https://secure.gravatar.com/avatar/890f7065d081f3a735362b6a1ca74b92?s=18&d=mm); }
 .FireFly { list-style-image: url(https://secure.gravatar.com/avatar/e0e2b1f19fb65cadc6e9b9f783acd414?s=18&d=mm); }
 .LJHarb { list-style-image: url(https://secure.gravatar.com/avatar/27f5eb444e2d61659e9fde1485dbab97?s=18&d=mm); }
