--- a/avatars.css
+++ b/avatars.css
@@ -37,3 +37,4 @@
 .Nisstyre { list-style-image: url(https://secure.gravatar.com/avatar/b376df43693e7d2c34f6f37e28b8316c?s=18&d=mm); }
 .Yorick { list-style-image: url(https://secure.gravatar.com/avatar/dd867331e27894d12835c7a824a78687?s=18&d=mm); }
 .JesseH { list-style-image: url(https://secure.gravatar.com/avatar/eb70a12808b97a7b94ab1d5215053426?s=18&d=mm); }
+.beardtree { list-style-image: url(https://secure.gravatar.com/avatar/9bdc03943aa2b07a6505aabde9162da3?s=18&d=mm); }
