Welcoming new member: @jahan-addison

--- a/avatars.css
+++ b/avatars.css
@@ -15,6 +15,7 @@
 .guy { list-style-image: url(https://secure.gravatar.com/avatar/d458bf7a80855c9461d0a76e8f2c76b9?s=18&d=mm); }
 .gf3 { list-style-image: url(https://secure.gravatar.com/avatar/4b0209ae3652cc5a7d53545e759fbe39?s=18&d=mm); }
 .guidj0s { list-style-image: url(https://secure.gravatar.com/avatar/755a2bb141e7ac7373f238c4c064b654?s=18&d=mm); }
+.satazor { list-style-image: url(https://secure.gravatar.com/avatar/1bcd914ba2b78ffe51a33f98eaac4514?s=18&d=mm); }
 .jeannicolas { list-style-image: url(https://secure.gravatar.com/avatar/025dcca07f3bd8d6fca31e2c601654fb?s=18&d=mm); }
 .joelteon { list-style-image: url(https://secure.gravatar.com/avatar/124f068d740698f58710004a1258567b?s=18&d=mm); }
 .ImBcmDth { list-style-image: url(https://secure.gravatar.com/avatar/073c9f11f5886ab6418cac4ee1a6f87c?s=18&d=mm); }
