Update link & nick for Tamir

--- a/avatars.css
+++ b/avatars.css
@@ -33,7 +33,7 @@
 .russfrank { list-style-image: url(https://secure.gravatar.com/avatar/4f49029f53241a2e35bbedbacf43d3ea?s=18&d=mm); }
 .capisce { list-style-image: url(https://secure.gravatar.com/avatar/4818d0b843461c10f5663810aea37c6f?s=18&d=mm); }
 .micrypt { list-style-image: url(https://secure.gravatar.com/avatar/1ac33cc7aa5a807fb44c8aa04a7cc1cb?s=18&d=mm); }
-.Kono { list-style-image: url(https://secure.gravatar.com/avatar/932a2894ab0b87aedf239a54ab901efb?s=18&d=mm); }
+.tamatias { list-style-image: url(https://secure.gravatar.com/avatar/932a2894ab0b87aedf239a54ab901efb?s=18&d=mm); }
 .Nisstyre { list-style-image: url(https://secure.gravatar.com/avatar/b376df43693e7d2c34f6f37e28b8316c?s=18&d=mm); }
 .Yorick { list-style-image: url(https://secure.gravatar.com/avatar/dd867331e27894d12835c7a824a78687?s=18&d=mm); }
 .JesseH { list-style-image: url(https://secure.gravatar.com/avatar/eb70a12808b97a7b94ab1d5215053426?s=18&d=mm); }
