Added Nicholas Spiridonov

--- a/avatars.css
+++ b/avatars.css
@@ -39,3 +39,4 @@
 .JesseH { list-style-image: url(https://secure.gravatar.com/avatar/eb70a12808b97a7b94ab1d5215053426?s=18&d=mm); }
 .dbkaplun { list-style-image: url(https://secure.gravatar.com/avatar/9bdc03943aa2b07a6505aabde9162da3?s=18&d=mm); }
 .SwooshyCueb { list-style-image: url(https://secure.gravatar.com/avatar/6bae034ba5462b606ee50c3a2b6d6f73?s=18&d=mm); }
+.sohje  { list-style-image: url(https://secure.gravatar.com/avatar/ecc6cf8113ad3b6f41e8ab88665228ff?s=18&d=mm); }
