--- a/avatars.css
+++ b/avatars.css
@@ -21,6 +21,7 @@
 .banister { list-style-image: url(https://secure.gravatar.com/avatar/890f7065d081f3a735362b6a1ca74b92?s=18&d=mm); }
 .FireFly { list-style-image: url(https://secure.gravatar.com/avatar/e0e2b1f19fb65cadc6e9b9f783acd414?s=18&d=mm); }
 .LJHarb { list-style-image: url(https://secure.gravatar.com/avatar/27f5eb444e2d61659e9fde1485dbab97?s=18&d=mm); }
+.mfbx9da4 { list-style-image: url(https://avatars0.githubusercontent.com/u/1690659?s=18&v=4); }
 .mynyml { list-style-image: url(https://secure.gravatar.com/avatar/6c2573a4fc20f55bc18e620374e700b9?s=18&d=mm); }
 .matjas { list-style-image: url(https://secure.gravatar.com/avatar/24e08a9ea84deb17ae121074d0f17125?s=18&d=mm); }
 .micahjohnston { list-style-image: url(https://secure.gravatar.com/avatar/b419f4586b0fc12648bc0a16f8377ed3?s=18&d=mm); }
